stupid  coaching - ruby on rails

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,12 @@
 
   <body>
     <%= yield %>
+
+<!-- <footer>
+  Made by greggstyle
+</footer> -->
+<!--
+<p>Now is <%= Time.now %><p> -->
+
   </body>
 </html>
